--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "grunt-contrib-clean": "~0.5.0",
     "grunt-concurrent": "~0.3.0",
     "time-grunt": "~0.2.0",
-    "load-grunt-tasks": "~0.2.0"
+    "load-grunt-tasks": "~0.2.0",
+    "assemble": "~0.4.37"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
