--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "normalize-css": "~3.0.1",
     "jquery": "~2.1.1",
     "modernizr": "~2.8.2",
-    "icomoon": "~0.0.1"
+    "icomoon": "~0.0.1",
+    "jquery-hoverIntent": "*"
   }
 }
